--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZZfYfWIDkFjmQ4kWAReuA",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNAAYDIH9Ho33J1eNwpLxTB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +28,128 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "#Prompting Principles\n",
+        "1. Principle 1: Write clear and specific instructions\n",
+        "2. Principle 2: Give the model time to “think”\n",
+        "\n",
+        "\n",
+        "##Tactics"
+      ],
       "metadata": {
-        "id": "tAkmi9a5bAjt"
+        "id": "rRc_-khYgby0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Azure OPEN AI Setup"
+      ],
+      "metadata": {
+        "id": "aO3S51YWbqqC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from openai import AzureOpenAI\n",
+        "import os\n",
+        "\n",
+        "from google.colab import userdata\n",
+        "open_ai_key=userdata.get('OPENAI_API_KEY')\n",
+        "open_ai_base=userdata.get('OPEN_API_URL')\n",
+        "api_version=\"2023-07-01-preview\""
+      ],
+      "metadata": {
+        "id": "ixLqxF5Jb2FD"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "openai = AzureOpenAI(\n",
+        "            api_version=api_version,\n",
+        "            azure_endpoint=open_ai_base,\n",
+        "            api_key=open_ai_key,\n",
+        "        )\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rY6unm6ucACG"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_completion(prompt, model=\"gpt-35-turbo\"):\n",
+        "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+        "    response = openai.chat.completions.create(\n",
+        "        model=model,\n",
+        "        messages=messages,\n",
+        "        temperature=0, # this is the degree of randomness of the model's output\n",
+        "    )\n",
+        "    return response.choices[0].message.content\n"
+      ],
+      "metadata": {
+        "id": "b370gLtWdZ2D"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = f\"\"\"\n",
+        "You should express what you want a model to do by \\\n",
+        "providing instructions that are as clear and \\\n",
+        "specific as you can possibly make them. \\\n",
+        "This will guide the model towards the desired output, \\\n",
+        "and reduce the chances of receiving irrelevant \\\n",
+        "or incorrect responses. Don't confuse writing a \\\n",
+        "clear prompt with writing a short prompt. \\\n",
+        "In many cases, longer prompts provide more clarity \\\n",
+        "and context for the model, which can lead to \\\n",
+        "more detailed and relevant outputs.\n",
+        "\"\"\"\n",
+        "prompt = f\"\"\"\n",
+        "Summarize the text delimited by triple backticks \\\n",
+        "into a single sentence.\n",
+        "```{text}```\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BaDw1UUjdzol",
+        "outputId": "9e8bc599-7c38-4e21-df9d-7467f4b032ce"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Clear and specific instructions for a model will guide it towards the desired output and reduce the chances of irrelevant or incorrect responses, and longer prompts can provide more clarity and context for the model, leading to more detailed and relevant outputs.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gH1DeEu5fjBi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
