--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN5wYq8KrLOOFc6bRoAwW6o",
+      "authorship_tag": "ABX9TyPmAbdTC/CwRxPKDomma8wR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,6 +99,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Tactic 1: Use delimiters to clearly indicate distinct parts of the input\n",
+        "###Delimiters can be anything like: ```, \"\"\", < >, <tag> </tag>, :"
+      ],
+      "metadata": {
+        "id": "cE-bRGKhhRyK"
+      }
     },
     {
       "cell_type": "code",
