--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPmAbdTC/CwRxPKDomma8wR",
+      "authorship_tag": "ABX9TyOFJ7+pcNZgu8HVgVP8zcTR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,10 +152,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Tactic 2: Ask for a structured output\n",
+        "####JSON, HTML"
+      ],
+      "metadata": {
+        "id": "EsMzzPCWhlxK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"\n",
+        "Generate a list of three made-up book titles along \\\n",
+        "with their authors and genres.\n",
+        "Provide them in JSON format with the following keys:\n",
+        "book_id, title, author, genre.\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "gH1DeEu5fjBi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gH1DeEu5fjBi"
+        "id": "S8WtSbXFiH5U"
       },
       "execution_count": null,
       "outputs": []
