--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOFJ7+pcNZgu8HVgVP8zcTR",
+      "authorship_tag": "ABX9TyNwsm92B/u5R7OvKZ0EMu9p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +52,57 @@
     {
       "cell_type": "code",
       "source": [
+        "pip install openai"
+      ],
+      "metadata": {
+        "id": "neatd1MhiZST",
+        "outputId": "116e16d3-9fff-433f-cf93-629d47298976",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting openai\n",
+            "  Downloading openai-1.37.2-py3-none-any.whl.metadata (22 kB)\n",
+            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
+            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
+            "Collecting httpx<1,>=0.23.0 (from openai)\n",
+            "  Downloading httpx-0.27.0-py3-none-any.whl.metadata (7.2 kB)\n",
+            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.8.2)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
+            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.4)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.7 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
+            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.7)\n",
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.7.4)\n",
+            "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
+            "  Downloading httpcore-1.0.5-py3-none-any.whl.metadata (20 kB)\n",
+            "Collecting h11<0.15,>=0.13 (from httpcore==1.*->httpx<1,>=0.23.0->openai)\n",
+            "  Downloading h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+            "Requirement already satisfied: annotated-types>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.20.1 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.20.1)\n",
+            "Downloading openai-1.37.2-py3-none-any.whl (337 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m337.1/337.1 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading httpx-0.27.0-py3-none-any.whl (75 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: h11, httpcore, httpx, openai\n",
+            "Successfully installed h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 openai-1.37.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from openai import AzureOpenAI\n",
         "import os\n",
         "\n",
@@ -64,7 +114,7 @@
       "metadata": {
         "id": "ixLqxF5Jb2FD"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -79,7 +129,7 @@
       "metadata": {
         "id": "rY6unm6ucACG"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -97,7 +147,7 @@
       "metadata": {
         "id": "b370gLtWdZ2D"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -138,15 +188,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaDw1UUjdzol",
-        "outputId": "9e8bc599-7c38-4e21-df9d-7467f4b032ce"
+        "outputId": "7b53da8b-eef6-4c6b-849d-6628bdd9d7a7"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Clear and specific instructions for a model will guide it towards the desired output and reduce the chances of irrelevant or incorrect responses, and longer prompts can provide more clarity and context for the model, leading to more detailed and relevant outputs.\n"
+            "It is important to provide clear and specific instructions to guide the model towards the desired output and reduce the chances of receiving irrelevant or incorrect responses, and longer prompts can provide more clarity and context for the model.\n"
           ]
         }
       ]
@@ -174,10 +224,43 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "gH1DeEu5fjBi"
+        "id": "gH1DeEu5fjBi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94466a82-59dd-43cb-c56e-1f7aa01e24c3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"books\": [\n",
+            "    {\n",
+            "      \"book_id\": 1,\n",
+            "      \"title\": \"The Midnight Garden\",\n",
+            "      \"author\": \"Eleanor Black\",\n",
+            "      \"genre\": \"Fantasy\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"book_id\": 2,\n",
+            "      \"title\": \"The Forgotten Symphony\",\n",
+            "      \"author\": \"Lucas Hart\",\n",
+            "      \"genre\": \"Mystery\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"book_id\": 3,\n",
+            "      \"title\": \"Echoes of Eternity\",\n",
+            "      \"author\": \"Aria Nightingale\",\n",
+            "      \"genre\": \"Romance\"\n",
+            "    }\n",
+            "  ]\n",
+            "}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
