--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwsm92B/u5R7OvKZ0EMu9p",
+      "authorship_tag": "ABX9TyPkjQqeJECGZDlBZvaDQizo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,11 +55,11 @@
         "pip install openai"
       ],
       "metadata": {
-        "id": "neatd1MhiZST",
-        "outputId": "116e16d3-9fff-433f-cf93-629d47298976",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "neatd1MhiZST",
+        "outputId": "116e16d3-9fff-433f-cf93-629d47298976"
       },
       "execution_count": 4,
       "outputs": [
@@ -263,10 +263,409 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Tactic 3: Ask the model to check whether conditions are satisfied"
+      ],
+      "metadata": {
+        "id": "U139Jg5Hi9R2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text_1 = f\"\"\"\n",
+        "Making a cup of tea is easy! First, you need to get some \\\n",
+        "water boiling. While that's happening, \\\n",
+        "grab a cup and put a tea bag in it. Once the water is \\\n",
+        "hot enough, just pour it over the tea bag. \\\n",
+        "Let it sit for a bit so the tea can steep. After a \\\n",
+        "few minutes, take out the tea bag. If you \\\n",
+        "like, you can add some sugar or milk to taste. \\\n",
+        "And that's it! You've got yourself a delicious \\\n",
+        "cup of tea to enjoy.\n",
+        "\"\"\"\n",
+        "prompt = f\"\"\"\n",
+        "You will be provided with text delimited by triple quotes.\n",
+        "If it contains a sequence of instructions, \\\n",
+        "re-write those instructions in the following format:\n",
+        "\n",
+        "Step 1 - ...\n",
+        "Step 2 - …\n",
+        "…\n",
+        "Step N - …\n",
+        "\n",
+        "If the text does not contain a sequence of instructions, \\\n",
+        "then simply write \\\"No steps provided.\\\"\n",
+        "\n",
+        "\\\"\\\"\\\"{text_1}\\\"\\\"\\\"\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(\"Completion for Text 1:\")\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S8WtSbXFiH5U",
+        "outputId": "3daed848-0c59-4ee8-b1e4-e661d36a8b74"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Completion for Text 1:\n",
+            "Step 1 - Get some water boiling.\n",
+            "Step 2 - Grab a cup and put a tea bag in it.\n",
+            "Step 3 - Pour the hot water over the tea bag.\n",
+            "Step 4 - Let the tea steep for a few minutes.\n",
+            "Step 5 - Take out the tea bag.\n",
+            "Step 6 - Add sugar or milk to taste.\n",
+            "Step 7 - Enjoy your delicious cup of tea.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Tactic 4: \"Few-shot\" prompting"
+      ],
+      "metadata": {
+        "id": "6xCiYMTUjSDA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"\n",
+        "Your task is to answer in a consistent style.\n",
+        "\n",
+        "<child>: Teach me about patience.\n",
+        "\n",
+        "<grandparent>: The river that carves the deepest \\\n",
+        "valley flows from a modest spring; the \\\n",
+        "grandest symphony originates from a single note; \\\n",
+        "the most intricate tapestry begins with a solitary thread.\n",
+        "\n",
+        "<child>: Teach me about resilience.\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "yUGJtRpsjDBV",
+        "outputId": "70ab8bcc-7f98-47d2-f4d6-d4ac4031ace8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<grandparent>: Resilience is like the mighty oak tree that withstands the fiercest storms, bending but never breaking. It is the ability to bounce back from adversity, to find strength in the face of challenges, and to keep moving forward despite setbacks. Just like the oak tree, resilience is built over time through perseverance and determination.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Principle 2: Give the model time to “think”\n",
+        "\n",
+        "##Tactic 1: Specify the steps required to complete a task"
+      ],
+      "metadata": {
+        "id": "P3BRqMuKjg12"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = f\"\"\"\n",
+        "In a charming village, siblings Jack and Jill set out on \\\n",
+        "a quest to fetch water from a hilltop \\\n",
+        "well. As they climbed, singing joyfully, misfortune \\\n",
+        "struck—Jack tripped on a stone and tumbled \\\n",
+        "down the hill, with Jill following suit. \\\n",
+        "Though slightly battered, the pair returned home to \\\n",
+        "comforting embraces. Despite the mishap, \\\n",
+        "their adventurous spirits remained undimmed, and they \\\n",
+        "continued exploring with delight.\n",
+        "\"\"\"\n",
+        "# example 1\n",
+        "prompt_1 = f\"\"\"\n",
+        "Perform the following actions:\n",
+        "1 - Summarize the following text delimited by triple \\\n",
+        "backticks with 1 sentence.\n",
+        "2 - Translate the summary into French.\n",
+        "3 - List each name in the French summary.\n",
+        "4 - Output a json object that contains the following \\\n",
+        "keys: french_summary, num_names.\n",
+        "\n",
+        "Separate your answers with line breaks.\n",
+        "\n",
+        "Text:\n",
+        "```{text}```\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt_1)\n",
+        "print(\"Completion for prompt 1:\")\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "a1U7VWrejWLL",
+        "outputId": "f30803d5-d65b-4f52-fd34-bb96d1f89aa2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Completion for prompt 1:\n",
+            "1 - Jack and Jill go on a quest to fetch water from a hilltop well, but misfortune strikes as Jack trips and tumbles down the hill, with Jill following suit, yet they return home with comforting embraces and their adventurous spirits undimmed.\n",
+            "\n",
+            "2 - Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais la malchance frappe alors que Jack trébuche et dégringole la colline, avec Jill qui suit, mais ils rentrent chez eux avec des étreintes réconfortantes et leurs esprits aventureux intacts.\n",
+            "\n",
+            "3 - Jack, Jill\n",
+            "\n",
+            "4 - \n",
+            "{\n",
+            "  \"french_summary\": \"Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais la malchance frappe alors que Jack trébuche et dégringole la colline, avec Jill qui suit, mais ils rentrent chez eux avec des étreintes réconfortantes et leurs esprits aventureux intacts.\",\n",
+            "  \"num_names\": 2\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Ask for output in a specified format"
+      ],
+      "metadata": {
+        "id": "72_XLh8hj2Gm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt_2 = f\"\"\"\n",
+        "Your task is to perform the following actions:\n",
+        "1 - Summarize the following text delimited by\n",
+        "  <> with 1 sentence.\n",
+        "2 - Translate the summary into French.\n",
+        "3 - List each name in the French summary.\n",
+        "4 - Output a json object that contains the\n",
+        "  following keys: french_summary, num_names.\n",
+        "\n",
+        "Use the following format:\n",
+        "Text: <text to summarize>\n",
+        "Summary: <summary>\n",
+        "Translation: <summary translation>\n",
+        "Names: <list of names in summary>\n",
+        "Output JSON: <json with summary and num_names>\n",
+        "\n",
+        "Text: <{text}>\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt_2)\n",
+        "print(\"\\nCompletion for prompt 2:\")\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "WHd4DHx2jwyz",
+        "outputId": "2e004b89-f2f2-4f03-8f93-b4a4637de5fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Completion for prompt 2:\n",
+            "Summary: Jack and Jill, siblings, go on a quest to fetch water from a hilltop well, but misfortune strikes as Jack trips on a stone and tumbles down the hill, with Jill following suit, yet they return home with comforting embraces and their adventurous spirits undimmed.\n",
+            "Translation: Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais la malchance frappe lorsque Jack trébuche sur une pierre et dégringole la colline, suivi par Jill, mais ils rentrent chez eux avec des étreintes réconfortantes et leur esprit aventureux reste intact.\n",
+            "Names: Jack, Jill\n",
+            "Output JSON: {\"french_summary\": \"Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais la malchance frappe lorsque Jack trébuche sur une pierre et dégringole la colline, suivi par Jill, mais ils rentrent chez eux avec des étreintes réconfortantes et leur esprit aventureux reste intact.\", \"num_names\": 2}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Tactic 2: Instruct the model to work out its own solution before rushing to a conclusion"
+      ],
+      "metadata": {
+        "id": "xImp6sS1kD_Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"\n",
+        "Determine if the student's solution is correct or not.\n",
+        "\n",
+        "Question:\n",
+        "I'm building a solar power installation and I need \\\n",
+        " help working out the financials.\n",
+        "- Land costs $100 / square foot\n",
+        "- I can buy solar panels for $250 / square foot\n",
+        "- I negotiated a contract for maintenance that will cost \\\n",
+        "me a flat $100k per year, and an additional $10 / square \\\n",
+        "foot\n",
+        "What is the total cost for the first year of operations\n",
+        "as a function of the number of square feet.\n",
+        "\n",
+        "Student's Solution:\n",
+        "Let x be the size of the installation in square feet.\n",
+        "Costs:\n",
+        "1. Land cost: 100x\n",
+        "2. Solar panel cost: 250x\n",
+        "3. Maintenance cost: 100,000 + 100x\n",
+        "Total cost: 100x + 250x + 100,000 + 100x = 450x + 100,000\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "B6-RSQbnj6GJ",
+        "outputId": "68c91f69-0e65-44bf-cd0f-3c943022e6b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The student's solution is correct. The total cost for the first year of operations as a function of the number of square feet is indeed 450x + 100,000.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note that the student's solution is actually not correct.\n",
+        "We can fix this by instructing the model to work out its own solution first.\n"
+      ],
+      "metadata": {
+        "id": "W5MBz3p1kTsR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"\n",
+        "Your task is to determine if the student's solution \\\n",
+        "is correct or not.\n",
+        "To solve the problem do the following:\n",
+        "- First, work out your own solution to the problem including the final total.\n",
+        "- Then compare your solution to the student's solution \\\n",
+        "and evaluate if the student's solution is correct or not.\n",
+        "Don't decide if the student's solution is correct until\n",
+        "you have done the problem yourself.\n",
+        "\n",
+        "Use the following format:\n",
+        "Question:\n",
+        "```\n",
+        "question here\n",
+        "```\n",
+        "Student's solution:\n",
+        "```\n",
+        "student's solution here\n",
+        "```\n",
+        "Actual solution:\n",
+        "```\n",
+        "steps to work out the solution and your solution here\n",
+        "```\n",
+        "Is the student's solution the same as actual solution \\\n",
+        "just calculated:\n",
+        "```\n",
+        "yes or no\n",
+        "```\n",
+        "Student grade:\n",
+        "```\n",
+        "correct or incorrect\n",
+        "```\n",
+        "\n",
+        "Question:\n",
+        "```\n",
+        "I'm building a solar power installation and I need help \\\n",
+        "working out the financials.\n",
+        "- Land costs $100 / square foot\n",
+        "- I can buy solar panels for $250 / square foot\n",
+        "- I negotiated a contract for maintenance that will cost \\\n",
+        "me a flat $100k per year, and an additional $10 / square \\\n",
+        "foot\n",
+        "What is the total cost for the first year of operations \\\n",
+        "as a function of the number of square feet.\n",
+        "```\n",
+        "Student's solution:\n",
+        "```\n",
+        "Let x be the size of the installation in square feet.\n",
+        "Costs:\n",
+        "1. Land cost: 100x\n",
+        "2. Solar panel cost: 250x\n",
+        "3. Maintenance cost: 100,000 + 100x\n",
+        "Total cost: 100x + 250x + 100,000 + 100x = 450x + 100,000\n",
+        "```\n",
+        "Actual solution:\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "UOx2ksBukM41",
+        "outputId": "9b00c16d-d6d3-4428-b99a-26d1584d5ea8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The total cost for the first year of operations as a function of the number of square feet is:\n",
+            "Total cost = Land cost + Solar panel cost + Maintenance cost\n",
+            "Total cost = $100x + $250x + $100,000 + $10x\n",
+            "Total cost = $360x + $100,000\n",
+            "\n",
+            "Is the student's solution the same as actual solution just calculated:\n",
+            "```\n",
+            "Yes\n",
+            "```\n",
+            "Student grade:\n",
+            "```\n",
+            "Correct\n",
+            "```\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "S8WtSbXFiH5U"
+        "id": "LFJ88WzYkYOl"
       },
       "execution_count": null,
       "outputs": []
