--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkjQqeJECGZDlBZvaDQizo",
+      "authorship_tag": "ABX9TyNAoVN20ll9QOFEqm1Mpn9u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Course - Link - https://learn.deeplearning.ai/courses/chatgpt-prompt-eng\n",
+        "\n",
         "#Prompting Principles\n",
         "1. Principle 1: Write clear and specific instructions\n",
         "2. Principle 2: Give the model time to “think”\n",
@@ -357,11 +359,11 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "yUGJtRpsjDBV",
-        "outputId": "70ab8bcc-7f98-47d2-f4d6-d4ac4031ace8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yUGJtRpsjDBV",
+        "outputId": "70ab8bcc-7f98-47d2-f4d6-d4ac4031ace8"
       },
       "execution_count": 12,
       "outputs": [
@@ -419,11 +421,11 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "a1U7VWrejWLL",
-        "outputId": "f30803d5-d65b-4f52-fd34-bb96d1f89aa2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a1U7VWrejWLL",
+        "outputId": "f30803d5-d65b-4f52-fd34-bb96d1f89aa2"
       },
       "execution_count": 13,
       "outputs": [
@@ -482,11 +484,11 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "WHd4DHx2jwyz",
-        "outputId": "2e004b89-f2f2-4f03-8f93-b4a4637de5fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WHd4DHx2jwyz",
+        "outputId": "2e004b89-f2f2-4f03-8f93-b4a4637de5fb"
       },
       "execution_count": 14,
       "outputs": [
@@ -542,11 +544,11 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "B6-RSQbnj6GJ",
-        "outputId": "68c91f69-0e65-44bf-cd0f-3c943022e6b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B6-RSQbnj6GJ",
+        "outputId": "68c91f69-0e65-44bf-cd0f-3c943022e6b5"
       },
       "execution_count": 15,
       "outputs": [
@@ -632,11 +634,11 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "UOx2ksBukM41",
-        "outputId": "9b00c16d-d6d3-4428-b99a-26d1584d5ea8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UOx2ksBukM41",
+        "outputId": "9b00c16d-d6d3-4428-b99a-26d1584d5ea8"
       },
       "execution_count": 16,
       "outputs": [
@@ -662,13 +664,128 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Text Summerization"
+      ],
+      "metadata": {
+        "id": "VKKATFixpiA7"
+      }
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "prod_review = \"\"\"\n",
+        "Got this panda plush toy for my daughter's birthday, \\\n",
+        "who loves it and takes it everywhere. It's soft and \\\n",
+        "super cute, and its face has a friendly look. It's \\\n",
+        "a bit small for what I paid though. I think there \\\n",
+        "might be other options that are bigger for the \\\n",
+        "same price. It arrived a day earlier than expected, \\\n",
+        "so I got to play with it myself before I gave it \\\n",
+        "to her.\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "aelK5zr3pthC"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"\n",
+        "Your task is to generate a short summary of a product \\\n",
+        "review from an ecommerce site.\n",
+        "\n",
+        "Summarize the review below, delimited by triple\n",
+        "backticks, in at most 30 words.\n",
+        "\n",
+        "Review: ```{prod_review}```\n",
+        "\"\"\"\n",
+        "\n",
+        "response = get_completion(prompt)\n",
+        "print(response)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LFJ88WzYkYOl",
+        "outputId": "8947b83e-4420-47d3-93c6-199c1001ee80"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Summary: \n",
+            "Cute and soft panda plush toy loved by daughter, but smaller than expected for the price. Arrived early, allowing for personal enjoyment before gifting.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "##Summarize with a focus on shipping and delivery"
+      ],
+      "metadata": {
+        "id": "RtAqEMlSp99M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = f\"\"\"\n",
+        "Your task is to generate a short summary of a product \\\n",
+        "review from an ecommerce site to give feedback to the \\\n",
+        "Shipping deparmtment.\n",
+        "\n",
+        "Summarize the review below, delimited by triple\n",
+        "backticks, in at most 30 words, and focusing on any aspects \\\n",
+        "that mention shipping and delivery of the product.\n",
+        "\n",
+        "Review: ```{prod_review}```\n",
+        "\"\"\"\n",
+        "\n",
+        "response = get_completion(prompt)\n",
+        "print(response)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bY7JR9-Qpua_",
+        "outputId": "52c59af3-4382-4801-82a8-44c54a6381be"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The product arrived a day earlier than expected, allowing for personal inspection before gifting. However, the size may not justify the price.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "LFJ88WzYkYOl"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "c9QXVK91p9J6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Fg3WB_dRp8Rm"
+      }
     }
   ]
 }
