--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAoVN20ll9QOFEqm1Mpn9u",
+      "authorship_tag": "ABX9TyN/uKJd0lCJUGHOcfb+L+tg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -775,10 +775,106 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "#Email Writing Prompts"
+      ],
       "metadata": {
         "id": "c9QXVK91p9J6"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# given the sentiment from the lesson on \"inferring\",\n",
+        "# and the original customer message, customize the email\n",
+        "sentiment = \"negative\"\n",
+        "\n",
+        "# review for a blender\n",
+        "review = f\"\"\"\n",
+        "So, they still had the 17 piece system on seasonal \\\n",
+        "sale for around $49 in the month of November, about \\\n",
+        "half off, but for some reason (call it price gouging) \\\n",
+        "around the second week of December the prices all went \\\n",
+        "up to about anywhere from between $70-$89 for the same \\\n",
+        "system. And the 11 piece system went up around $10 or \\\n",
+        "so in price also from the earlier sale price of $29. \\\n",
+        "So it looks okay, but if you look at the base, the part \\\n",
+        "where the blade locks into place doesn’t look as good \\\n",
+        "as in previous editions from a few years ago, but I \\\n",
+        "plan to be very gentle with it (example, I crush \\\n",
+        "very hard items like beans, ice, rice, etc. in the \\\n",
+        "blender first then pulverize them in the serving size \\\n",
+        "I want in the blender then switch to the whipping \\\n",
+        "blade for a finer flour, and use the cross cutting blade \\\n",
+        "first when making smoothies, then use the flat blade \\\n",
+        "if I need them finer/less pulpy). Special tip when making \\\n",
+        "smoothies, finely cut and freeze the fruits and \\\n",
+        "vegetables (if using spinach-lightly stew soften the \\\n",
+        "spinach then freeze until ready for use-and if making \\\n",
+        "sorbet, use a small to medium sized food processor) \\\n",
+        "that you plan to use that way you can avoid adding so \\\n",
+        "much ice if at all-when making your smoothie. \\\n",
+        "After about a year, the motor was making a funny noise. \\\n",
+        "I called customer service but the warranty expired \\\n",
+        "already, so I had to buy another one. FYI: The overall \\\n",
+        "quality has gone done in these types of products, so \\\n",
+        "they are kind of counting on brand recognition and \\\n",
+        "consumer loyalty to maintain sales. Got it in about \\\n",
+        "two days.\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "LnkvMm7R2TPV"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "prompt = f\"\"\"\n",
+        "You are a customer service AI assistant.\n",
+        "Your task is to send an email reply to a valued customer.\n",
+        "Given the customer email delimited by ```, \\\n",
+        "Generate a reply to thank the customer for their review.\n",
+        "If the sentiment is positive or neutral, thank them for \\\n",
+        "their review.\n",
+        "If the sentiment is negative, apologize and suggest that \\\n",
+        "they can reach out to customer service.\n",
+        "Make sure to use specific details from the review.\n",
+        "Write in a concise and professional tone.\n",
+        "Sign the email as `AI customer agent`.\n",
+        "Customer review: ```{review}```\n",
+        "Review sentiment: {sentiment}\n",
+        "\"\"\"\n",
+        "response = get_completion(prompt)\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "-OBzIC4z2LbN",
+        "outputId": "6a7969d7-a7c4-4b9a-ee90-43e8727adfdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dear valued customer,\n",
+            "\n",
+            "Thank you for taking the time to share your feedback with us. We are sorry to hear about your experience with the pricing and the quality of the product. We apologize for any inconvenience this may have caused you. If you have any further concerns, please feel free to reach out to our customer service team for assistance.\n",
+            "\n",
+            "Thank you for your continued support.\n",
+            "\n",
+            "AI customer agent\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
