--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/uKJd0lCJUGHOcfb+L+tg",
+      "authorship_tag": "ABX9TyOdUrHKLAInppIrAtQ9SCTN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Course - Link - https://learn.deeplearning.ai/courses/chatgpt-prompt-eng\n",
         "\n",
-        "#Prompting Principles\n",
+        "\n",
+        "#Prompting Principles & Tectics\n",
         "1. Principle 1: Write clear and specific instructions\n",
         "2. Principle 2: Give the model time to “think”\n",
         "\n",
         "\n",
-        "##Tactics"
+        "\n",
+        "\n",
+        "#####Course - Link - https://learn.deeplearning.ai/courses/chatgpt-prompt-eng"
       ],
       "metadata": {
         "id": "rRc_-khYgby0"
@@ -853,11 +855,11 @@
         "print(response)"
       ],
       "metadata": {
-        "id": "-OBzIC4z2LbN",
-        "outputId": "6a7969d7-a7c4-4b9a-ee90-43e8727adfdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-OBzIC4z2LbN",
+        "outputId": "6a7969d7-a7c4-4b9a-ee90-43e8727adfdf"
       },
       "execution_count": 21,
       "outputs": [
