--- a/Chat_workflow.ipynb
+++ b/Chat_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNT9/y7G7s8ZroTMnQpnpLv",
+      "authorship_tag": "ABX9TyO1qEJQNmRXBAabx4HuaGeA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,10 +98,38 @@
         "api_version=\"2023-07-01-preview\""
       ],
       "metadata": {
-        "id": "ixLqxF5Jb2FD"
+        "id": "ixLqxF5Jb2FD",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 384
+        },
+        "outputId": "c8cec30c-eec7-4de0-be96-6fb53ae6db20"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'openai'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-1ea2b3700bbc>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mopenai\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAzureOpenAI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0muserdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mopen_ai_key\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muserdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'OPENAI_API_KEY'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openai'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -129,10 +157,28 @@
         "        messages=messages,\n",
         "        temperature=0, # this is the degree of randomness of the model's output\n",
         "    )\n",
-        "    return response.choices[0].message.content\n"
+        "    return response.choices[0].message.content\n",
+        "\n",
+        "\n",
+        "def get_completion_from_messages(messages, model=\"gpt-35-turbo\", temperature=0):\n",
+        "    response = openai.chat.completions.create(\n",
+        "        model=model,\n",
+        "        messages=messages,\n",
+        "        temperature=temperature, # this is the degree of randomness of the model's output\n",
+        "    )\n",
+        "    return response.choices[0].message[\"content\"]"
       ],
       "metadata": {
         "id": "b370gLtWdZ2D"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5TfsxtVgS1QP"
       },
       "execution_count": null,
       "outputs": []
